--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">UserDirectory</string>
+
+    <string name="search_placeholder">Search…</string>
+    <string name="search_leading_icon_content_desc">Search</string>
+    <string name="search_trailing_icon_content_desc">Clear search</string>
 </resources>
